--- a/mylib-main/libFT_1/Makefile
+++ b/mylib-main/libFT_1/Makefile
@@ -25,7 +25,10 @@ SRCS = ft_atoi.c \
 		ft_calloc.c \
 		ft_strdup.c \
 		ft_strjoin.c \
-		ft_strtrim.c
+		ft_strtrim.c \
+		ft_itoa.c \
+		ft_strmapi.c \
+		ft_striteri.c
 
 OBJS = $(SRCS:.c=.o)
 NAME = libft.a
